--- a/style.css
+++ b/style.css
@@ -220,3 +220,14 @@ nav {
     margin: .5em;
     cursor: pointer;
 }
+@media only screen and (min-width: 768px) {
+    .mobile-menu, mobile-menu-exit {
+        display: none;
+    }
+    .navbar .container {
+        display: grid;
+    }
+    .navbar nav {
+        display: flex;
+    }
+}
